[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tokenai"
version = "0.1.0"
description = "LLM context management — token counting, rolling summarization, dollar savings reports"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["llm", "tokens", "context", "summarization", "anthropic", "openai", "tiktoken"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "anthropic>=0.100.0",
    "tiktoken>=0.7.0",
    "sentence-transformers>=2.2.0",
    "chromadb>=0.4.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/Ksumanth-hub/tokenai"
Repository = "https://github.com/Ksumanth-hub/tokenai"

[tool.hatch.build.targets.wheel]
packages = ["tokenai"]
